feat: opti compare range stats, close #44
